tests/neg/magic-offset-header-c_wrapper.check
bad option '-Xmagic-offset-header:SOURCE_CODE_START_MARKER' was ignored
-- [E007] Type Mismatch Error: tests/neg/magic-offset-header-c_wrapper.scala:8:18 --------------------------------------
8 |  val x: String = 0  // anypos-error
  |                  ^
  |                  Found:    (0 : Int)
  |                  Required: String
  |
  | longer explanation available when compiling with `-explain`
